# nano-PEARL

./: .gitignore  README.md  bench.py  example.py  pyproject.toml
benchmark/: bench_example.sh  eval_benchmark.py  eval_random.py
benchmark/data/: AIME.jsonl  CNNDM.jsonl  GSM8K.jsonl  HumanEval.jsonl
docs/: bench_summary.md  bench_summary_l40s.md  benchmark.html  benchmark.js  eagle3_report.md  faqs.html  index.html  papers.html  pearl 动画.pptx  quickstart.html  site.js  styles.css
nano_pearl/: __init__.py  pearl_config.py
nano_pearl/layers/: attention.py  embed_head.py  linear.py  rotary_embedding.py  sampler.py
nano_pearl/models/: __init__.py  llama.py  qwen2.py  qwen3.py
nano_pearl/pearl_engine/: block_manager.py  pearl_engine.py  pearl_model_runner.py  scheduler.py  sequence.py
nano_pearl/utils/: context.py  loader.py  pearl_logger.py
static/: default_prompts.txt
